--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "pwa-asset-generator": "^6.2.1",
+    "schema-dts": "^1.1.2",
     "tailwindcss": "3.0.24",
     "typescript": "4.9.4",
     "uuid": "9.0.0"
