--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: "CI/CD"
 
 on:
   push:
@@ -13,34 +13,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build (Node ${{ matrix.node }})
+    name: Build
 
     concurrency:
       group: ${{ github.ref }}
       cancel-in-progress: true
 
-    strategy:
-      matrix:
-        node: ["18"]
-
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: .nvmrc
+          cache: "npm"
 
       - uses: actions/cache@v3
-        env:
-          cache-name: next-build-cache
         with:
           path: |
             ~/.npm
-            ${{ github.workspace }}/build/cache
+            ${{ github.workspace }}/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-          cache: "npm"
+          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
       - name: Install dependencies
         run: npm install
@@ -161,7 +153,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version-file: .npmrc
           cache: "npm"
 
       - run: npm install
