--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -93,7 +93,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
+          username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./build/
           server-dir: ${{ vars.SERVER_DIR }}
@@ -133,7 +133,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
+          username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./build/
           server-dir: ${{ vars.SERVER_DIR }}
@@ -176,7 +176,7 @@ jobs:
         continue-on-error: true
         with:
           server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
+          username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./styleguide/
           server-dir: ${{ vars.SERVER_DIR }}
