feat: add environment indicator on staging [NOTICKET]

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,11 @@ NODE_ENV="development"
 
 # Can be useful to debug GraphQL queries
 DEBUG_GRAPHQL_CLIENT=false
+
+# Enables or disables the staging indicator
+ENABLE_STAGING_INDICATOR=true
+
+# Staging indicator data
+GITHUB_SHA=a84d7e82c459abffdcb64d7646def92876feaadb
+GITHUB_REF=refs/heads/feat/some-branch-name
+GITHUB_RUN_ID=4962330368
