--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,13 +51,15 @@ jobs:
           NEXT_PUBLIC_MATOMO_CONTAINER_ID: ${{ secrets.MATOMO_CONTAINER_ID }}
           NEXT_PUBLIC_DISCORD_REPORTING_WEBHOOK_URL: ${{ secrets.DSICORD_REPORTING_WEBHOOK_URL }}
           NEXT_PUBLIC_DISCORD_CONTACT_WEBHOOK_URL: ${{ secrets.DISCORD_CONTACT_WEBHOOK_URL }}
-          NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL: ${{ secrets.SLACK_CONTACT_WEBHOOK_URL }}
-          NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL: ${{ secrets.SLACK_REPORTING_WEBHOOK_URL }}
           NEXT_PUBLIC_MAPBOX_API_KEY: ${{ secrets.MAPBOX_API_KEY }}
           WORKBOX_APP_ID: ${{ secrets.WORKBOX_APP_ID }}
           WORKBOX_APP_VERSION: ${{ secrets.WORKBOX_APP_VERSION }}
           BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
           NODE_ENV: ${{ secrets.NODE_ENV }}
+          ENABLE_STAGING_INDICATOR: ${{ github.ref != 'refs/heads/main' }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF: ${{ github.ref }}
+          GITHUB_RUN_ID: ${{ github.run_id }}
 
       - uses: actions/upload-artifact@v3
         with:
@@ -87,7 +89,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: build-output
-          path: build-output
+          path: build
 
       - name: Deploy Website
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
@@ -103,6 +105,7 @@ jobs:
             **/.git*
             **/.git*/**
             **/.github/**
+            out/robots.txt
 
       - name: Report issue to Discord
         if: failure() && github.ref == 'refs/heads/main'
