--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
     "dev": "next dev",
     "lint": "next lint",
     "build": "run-s build:*",
@@ -54,6 +55,7 @@
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
+    "@next/bundle-analyzer": "^13.4.2",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
@@ -66,6 +68,7 @@
     "@types/react-transition-group": "4.4.5",
     "@types/uuid": "9.0.1",
     "autoprefixer": "10.4.14",
+    "cross-env": "^7.0.3",
     "cssnano": "6.0.0",
     "dotenv": "16.0.3",
     "eslint": "8.39.0",
