ci: integrate bundle analysis and reporting [NOTICKET]

--- a/package.json
+++ b/package.json
@@ -86,5 +86,11 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
     "*.{js,jsx,ts,tsx,css,scss,yaml,md}": "prettier --write"
+  },
+  "nextBundleAnalysis": {
+    "budget": 358400,
+    "budgetPercentIncreaseRed": 20,
+    "minimumChangeThreshold": 2,
+    "showDetails": true
   }
 }
