--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -4,126 +4,148 @@
 name: 'Next.js Bundle Analysis'
 
 on:
-  pull_request:
-  push:
-    branches:
-      - main # change this if your default branch is named differently
-  workflow_dispatch:
+    pull_request:
+    push:
+        branches:
+            - main # change this if your default branch is named differently
+    workflow_dispatch:
 
 defaults:
-  run:
-    # change this if your nextjs app does not live at the root of the repo
-    working-directory: ./
+    run:
+        # change this if your nextjs app does not live at the root of the repo
+        working-directory: ./
 
 permissions:
-  contents: read # for checkout repository
-  actions: read # for fetching base branch bundle stats
-  pull-requests: write # for comments
+    contents: read # for checkout repository
+    actions: read # for fetching base branch bundle stats
+    pull-requests: write # for comments
 
 jobs:
-  analyze:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    analyze:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+            - name: Install Node.js
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 18
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+            - name: Install dependencies
+              uses: bahmutov/npm-install@v1
 
-      # If pnpm is used, you need to switch the previous step with the following one. pnpm does not create a package-lock.json
-      # so the step above will fail to pull dependencies
-      # - uses: pnpm/action-setup@v2
-      #   name: Install pnpm
-      #   id: pnpm-install
-      #   with:
-      #     version: 7
-      #     run_install: true
+            # If pnpm is used, you need to switch the previous step with the following one. pnpm does not create a package-lock.json
+            # so the step above will fail to pull dependencies
+            # - uses: pnpm/action-setup@v2
+            #   name: Install pnpm
+            #   id: pnpm-install
+            #   with:
+            #     version: 7
+            #     run_install: true
 
-      - name: Restore next build
-        uses: actions/cache@v3
-        id: restore-build-cache
-        env:
-          cache-name: cache-next-build
-        with:
-          # if you use a custom build directory, replace all instances of `.next` in this file with your build directory
-          # ex: if your app builds to `dist`, replace `.next` with `dist`
-          path: .next/cache
-          # change this if you prefer a more strict cache
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
+            - name: Restore next build
+              uses: actions/cache@v3
+              id: restore-build-cache
+              env:
+                  cache-name: cache-next-build
+              with:
+                  # if you use a custom build directory, replace all instances of `.next` in this file with your build directory
+                  # ex: if your app builds to `dist`, replace `.next` with `dist`
+                  path: .next/cache
+                  # change this if you prefer a more strict cache
+                  key: ${{ runner.os }}-build-${{ env.cache-name }}
 
-      - name: Build next.js app
-        # change this if your site requires a custom build command
-        run: ./node_modules/.bin/next build
+            - name: Generate GraphQL hooks
+              run: npm run graphql:generate
 
-      # Here's the first place where next-bundle-analysis' own script is used
-      # This step pulls the raw bundle stats for the current bundle
-      - name: Analyze bundle
-        run: npx -p nextjs-bundle-analysis report
+            - name: Build next.js app
+              run: ./node_modules/.bin/next build
+              env:
+                  NEXT_TELEMETRY_DISABLED: true
+                  NEXT_PUBLIC_CMS_GRAPHQL_API_URL: ${{ secrets.CMS_GRAPHQL_API_URL }}
+                  NEXT_PUBLIC_CMS_REST_API_URL: ${{ secrets.CMS_REST_API_URL }}
+                  NEXT_PUBLIC_CMS_API_TOKEN: ${{ secrets.CMS_API_TOKEN }}
+                  NEXT_PUBLIC_MATOMO_URL: ${{ secrets.MATOMO_URL }}
+                  NEXT_PUBLIC_MATOMO_CONTAINER_ID: ${{ secrets.MATOMO_CONTAINER_ID }}
+                  NEXT_PUBLIC_DISCORD_REPORTING_WEBHOOK_URL: ${{ secrets.DSICORD_REPORTING_WEBHOOK_URL }}
+                  NEXT_PUBLIC_DISCORD_CONTACT_WEBHOOK_URL: ${{ secrets.DISCORD_CONTACT_WEBHOOK_URL }}
+                  NEXT_PUBLIC_SLACK_CONTACT_WEBHOOK_URL: ${{ secrets.SLACK_CONTACT_WEBHOOK_URL }}
+                  NEXT_PUBLIC_SLACK_REPORTING_WEBHOOK_URL: ${{ secrets.SLACK_REPORTING_WEBHOOK_URL }}
+                  NEXT_PUBLIC_MAPBOX_API_KEY: ${{ secrets.MAPBOX_API_KEY }}
+                  WORKBOX_APP_ID: ${{ secrets.WORKBOX_APP_ID }}
+                  WORKBOX_APP_VERSION: ${{ secrets.WORKBOX_APP_VERSION }}
+                  BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
+                  NODE_ENV: ${{ secrets.NODE_ENV }}
+                  ENABLE_STAGING_INDICATOR: ${{ github.ref != 'refs/heads/main' }}
+                  GITHUB_SHA: ${{ github.sha }}
+                  GITHUB_REF: ${{ github.ref }}
+                  GITHUB_RUN_ID: ${{ github.run_id }}
 
-      - name: Upload bundle
-        uses: actions/upload-artifact@v3
-        with:
-          name: bundle
-          path: .next/analyze/__bundle_analysis.json
+            # Here's the first place where next-bundle-analysis' own script is used
+            # This step pulls the raw bundle stats for the current bundle
+            - name: Analyze bundle
+              run: npx -p nextjs-bundle-analysis report
 
-      - name: Download base branch bundle stats
-        uses: dawidd6/action-download-artifact@v2
-        if: success() && github.event.number
-        with:
-          workflow: nextjs_bundle_analysis.yml
-          branch: ${{ github.event.pull_request.base.ref }}
-          path: .next/analyze/base
+            - name: Upload bundle
+              uses: actions/upload-artifact@v3
+              with:
+                  name: bundle
+                  path: .next/analyze/__bundle_analysis.json
 
-      # And here's the second place - this runs after we have both the current and
-      # base branch bundle stats, and will compare them to determine what changed.
-      # There are two configurable arguments that come from package.json:
-      #
-      # - budget: optional, set a budget (bytes) against which size changes are measured
-      #           it's set to 350kb here by default, as informed by the following piece:
-      #           https://infrequently.org/2021/03/the-performance-inequality-gap/
-      #
-      # - red-status-percentage: sets the percent size increase where you get a red
-      #                          status indicator, defaults to 20%
-      #
-      # Either of these arguments can be changed or removed by editing the `nextBundleAnalysis`
-      # entry in your package.json file.
-      - name: Compare with base branch bundle
-        if: success() && github.event.number
-        run: ls -laR .next/analyze/base && npx -p nextjs-bundle-analysis compare
+            - name: Download base branch bundle stats
+              uses: dawidd6/action-download-artifact@v2
+              if: success() && github.event.number
+              with:
+                  workflow: nextjs_bundle_analysis.yml
+                  branch: ${{ github.event.pull_request.base.ref }}
+                  path: .next/analyze/base
 
-      - name: Get Comment Body
-        id: get-comment-body
-        if: success() && github.event.number
-        # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#multiline-strings
-        run: |
-          echo "body<<EOF" >> $GITHUB_OUTPUT
-          echo "$(cat .next/analyze/__bundle_analysis_comment.txt)" >> $GITHUB_OUTPUT
-          echo EOF >> $GITHUB_OUTPUT
+            # And here's the second place - this runs after we have both the current and
+            # base branch bundle stats, and will compare them to determine what changed.
+            # There are two configurable arguments that come from package.json:
+            #
+            # - budget: optional, set a budget (bytes) against which size changes are measured
+            #           it's set to 350kb here by default, as informed by the following piece:
+            #           https://infrequently.org/2021/03/the-performance-inequality-gap/
+            #
+            # - red-status-percentage: sets the percent size increase where you get a red
+            #                          status indicator, defaults to 20%
+            #
+            # Either of these arguments can be changed or removed by editing the `nextBundleAnalysis`
+            # entry in your package.json file.
+            - name: Compare with base branch bundle
+              if: success() && github.event.number
+              run: ls -laR .next/analyze/base && npx -p nextjs-bundle-analysis compare
 
-      - name: Find Comment
-        uses: peter-evans/find-comment@v2
-        if: success() && github.event.number
-        id: fc
-        with:
-          issue-number: ${{ github.event.number }}
-          body-includes: '<!-- __NEXTJS_BUNDLE -->'
+            - name: Get Comment Body
+              id: get-comment-body
+              if: success() && github.event.number
+              # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#multiline-strings
+              run: |
+                  echo "body<<EOF" >> $GITHUB_OUTPUT
+                  echo "$(cat .next/analyze/__bundle_analysis_comment.txt)" >> $GITHUB_OUTPUT
+                  echo EOF >> $GITHUB_OUTPUT
 
-      - name: Create Comment
-        uses: peter-evans/create-or-update-comment@v2
-        if: success() && github.event.number && steps.fc.outputs.comment-id == 0
-        with:
-          issue-number: ${{ github.event.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
+            - name: Find Comment
+              uses: peter-evans/find-comment@v2
+              if: success() && github.event.number
+              id: fc
+              with:
+                  issue-number: ${{ github.event.number }}
+                  body-includes: '<!-- __NEXTJS_BUNDLE -->'
 
-      - name: Update Comment
-        uses: peter-evans/create-or-update-comment@v2
-        if: success() && github.event.number && steps.fc.outputs.comment-id != 0
-        with:
-          issue-number: ${{ github.event.number }}
-          body: ${{ steps.get-comment-body.outputs.body }}
-          comment-id: ${{ steps.fc.outputs.comment-id }}
-          edit-mode: replace
+            - name: Create Comment
+              uses: peter-evans/create-or-update-comment@v2
+              if: success() && github.event.number && steps.fc.outputs.comment-id == 0
+              with:
+                  issue-number: ${{ github.event.number }}
+                  body: ${{ steps.get-comment-body.outputs.body }}
+
+            - name: Update Comment
+              uses: peter-evans/create-or-update-comment@v2
+              if: success() && github.event.number && steps.fc.outputs.comment-id != 0
+              with:
+                  issue-number: ${{ github.event.number }}
+                  body: ${{ steps.get-comment-body.outputs.body }}
+                  comment-id: ${{ steps.fc.outputs.comment-id }}
+                  edit-mode: replace
