--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -58,10 +58,10 @@ jobs:
           WORKBOX_APP_VERSION: ${{ secrets.WORKBOX_APP_VERSION }}
           BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
           NODE_ENV: ${{ secrets.NODE_ENV }}
-          ENABLE_STAGING_INDICATOR: ${{ github.ref != 'refs/heads/main' }}
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_RUN_ID: ${{ github.run_id }}
+          NEXT_PUBLIC_ENABLE_STAGING_INDICATOR: ${{ github.ref != 'refs/heads/main' }}
+          NEXT_PUBLIC_GITHUB_SHA: ${{ github.sha }}
+          NEXT_PUBLIC_GITHUB_REF: ${{ github.ref }}
+          NEXT_PUBLIC_GITHUB_RUN_ID: ${{ github.run_id }}
 
       - uses: actions/upload-artifact@v3
         with:
