--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -74,10 +74,10 @@ jobs:
                   WORKBOX_APP_VERSION: ${{ secrets.WORKBOX_APP_VERSION }}
                   BUILD_ID_NAMESPACE: ${{ secrets.BUILD_ID_NAMESPACE }}
                   NODE_ENV: ${{ secrets.NODE_ENV }}
-                  ENABLE_STAGING_INDICATOR: ${{ github.ref != 'refs/heads/main' }}
-                  GITHUB_SHA: ${{ github.sha }}
-                  GITHUB_REF: ${{ github.ref }}
-                  GITHUB_RUN_ID: ${{ github.run_id }}
+                  NEXT_PUBLIC_ENABLE_STAGING_INDICATOR: false
+                  NEXT_PUBLIC_GITHUB_SHA: ''
+                  NEXT_PUBLIC_GITHUB_REF: ''
+                  NEXT_PUBLIC_GITHUB_RUN_ID: ''
 
             # Here's the first place where next-bundle-analysis' own script is used
             # This step pulls the raw bundle stats for the current bundle
