refactor: overhaul 2024 with posthog and multiday event

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,9 @@ NEXT_PUBLIC_CMS_REST_API_URL="https://cms.com/api/v1/rest"
 # Access token to interact with the CMS
 NEXT_PUBLIC_CMS_API_TOKEN="<api-token>"
 
-# URL to the Matomo host for analytics data
-NEXT_PUBLIC_MATOMO_URL="https://matomo.com"
-
-# Matomo Tag Manager container ID for the website
-NEXT_PUBLIC_MATOMO_CONTAINER_ID="12345678"
+# PostHog integration
+NEXT_PUBLIC_POSTHOG_KEY="<token>"
+NEXT_PUBLIC_POSTHOG_HOST="<host>"
 
 # Discord Webhook URL for contact submissions
 NEXT_PUBLIC_DISCORD_CONTACT_WEBHOOK_URL=""
