--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lazysizes": "5.3.2",
     "mapbox-gl": "2.14.1",
     "next": "13.3.1",
+    "posthog-js": "^1.116.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
@@ -56,6 +57,7 @@
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@next/bundle-analyzer": "^13.4.2",
+    "@samkirkland/ftp-deploy": "^1.2.4",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
